modules/bastion-host/_bastion-host.tf
# autoscaling groups.

resource "aws_launch_configuration" "bastion-conf" {
    name_prefix = "bastion-host-lc-"
    image_id = "${var.bastion_ami}"
    instance_type = "${var.instance_type}"
    associate_public_ip_address = false
    security_groups = ["${aws_security_group.bastion-ssh.id}"]
    user_data_base64 = "${file("${path.module}/template/bastion-user-data.tpl")}"
    key_name = "${var.ssh_keypair}"
    root_block_device {
        volume_size = "20"
        volume_type = "gp2"
        encrypted = "true"
    }

    lifecycle {
        create_before_destroy = true
    }
}

resource "aws_autoscaling_group" "bastion-asg" {
    name = "Bastion-host-asg"
    launch_configuration = "${aws_launch_configuration.bastion-conf}"
    availability_zones = ["${data.aws_availability_zones.available.names[count.index]}"]
    vpc_zone_identifier = ["${aws_subnet.bastion-public-subnet.id[count.index]}"]
    max_size = "${var.asg["asg_max"]}"
    min_size = "${var.asg["asg_min"]}"
    desired_capacity = "${var.asg["asg_desired"]}"
    health_check_grace_period = "${var.asg["health_check_grace"]}"
    health_check_type = "${var.asg["health_check_type"]}}"

    lifecycle {
        create_before_destroy = true
    }

    tags = "${merge(map(
        "Name", "Bastion host"
         ), "propagate_at_launch", true,  var.common_tags)}"
}

resource "aws_iam_instance_profile" "bastion_profile" {
  name = "test_profile"
  role = "${aws_iam_role.bastion_role.name}"
}

resource "aws_iam_role" "bastion_role" {
    name = "bastion_role"
    path = "/"

    assume_role_policy = "${file("${path.module}/templates/basion-iam.tpl")}"
}

resource "aws_eip" "bastion-host" {
    count = "${var.bastion_count}"
    vpc = true
    depends_on = ["aws_internet_gateway.bastion"]
    tags = "${merge(map(
        "Name", "Bastion host elastic ip address",
    ), var.common_tags)}"
}

resource "aws_internet_gateway" "bastion" {
    vpc_id = "${var.target_vpc_id}"
}

# subnets & security groups

# subnets

resource "aws_subnet" "bastion-public-subnet"{
    count                   = "${var.bastion_count}"
    availability_zone       = "${data.aws_availability_zones.available.names[count.index]}"
    cidr_block              = "${element(var.bastion_subnets, count.index)}"
    vpc_id                  = "${var.target_vpc_id}"
    map_public_ip_on_launch =  true
}


# security group

resource "aws_security_group" "bastion-ssh" {
    name                = "bastion-host-security-group"
    description         = "A security group for the bastion host servers"
    vpc_id              = "${var.target_vpc_id}"

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = "${merge(map(
        "Name", "bastion host security group",
    ), var.common_tags)}"
}


# security group rules

resource "aws_security_group_rule" "bastion-ssh" {
    cidr_blocks                 = ["${length(var.bastion_ssh_ingress)}"]
    description                 = "Allow ssh ingress into bastion host nodes"
    from_port                   = "443"
    protocol                    = "tcp"
    security_group_id           = "${aws_security_group.bastion-ssh.id}"
    to_port                     = "443"
    type                        = "ingress"
}

resource "aws_security_group_rule" "bastion-to-kubernetes-workers" {
    cidr_blocks                 = ["${length(var.bastion_subnets)}"]
    description                 = "Allow nodes to connect to private subnets"
    from_port                   = "443"
    protocol                    = "tcp"
    security_group_id           = "${var.target_security_group_id}"
    to_port                     = "443"
    type                        = "ingress"
}


resource "aws_route_table" "bastion-hosts" {
    vpc_id                      = "${var.target_vpc_id}"

    route {
        cidr_block              = "10.0.0.0/16"
        gateway_id              = "${aws_internet_gateway.bastion.id}"
    }

}

resource "aws_route" "bastion-administration" {
    count                       = "${length(var.cidr_range_bastion_access)}"
    route_table_id              = "${aws_route_table.bastion-hosts.id}"
    destination_cidr_block      = "${element(var.cidr_range_bastion_access, count.index)}"
    depends_on                  = ["aws_route_table.bastion-hosts"]
}
